--- a/CSS/index.css
+++ b/CSS/index.css
@@ -93,7 +93,7 @@
 	padding: 0px 18px 9px; 
 	text-decoration: none;
 	font-size: 20px;	
-	font-family: AllerDisplay;
+	font-family: OsvaldBold;
 }
 
 .firstNav li:last-child{
@@ -102,8 +102,39 @@
 
 .contactsDiv{
 	float: right;
-	width: 250px;
+	width: 180px;
 	height: 100px;
+}
+
+
+.infoFactory{
+	position: relative; 
+	margin-top: 15px ;
+	height: 24px; 
+}
+
+.imageContact{
+	float :left;
+
+}
+
+.infoSpan{
+	line-height: 24px; 
+	margin-left : 5px;
+	font-family: Lobster;
+	color : green;
+
+}
+
+.infoSpan:hover{
+	cursor: pointer;
+}
+
+.content{
+	width: 100%;
+	height: 100%;
+	background-color: #eee;
+	margin-top: 10px;
 }
 
 @font-face {
@@ -114,4 +145,14 @@
 @font-face {
 	font-family:AllerDisplay;
 	src: url("../Fonts/AllerDisplay.ttf") format("opentype");
+}
+
+@font-face {
+	font-family: Lobster;
+	src: url("../Fonts/Lobster_1.3.otf") format("opentype");
+}
+
+@font-face {
+	font-family: OsvaldBold;
+	src: url("../Fonts/Oswald-Bold.otf") format("opentype");
 }
