--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,8 +4,7 @@
 }
 
 .externDiv{
-	width: 86%;
-	background-color : ;
+	width: 86%;	
 	height: 100%;
 	left: 50%;
 	position: absolute;
@@ -20,7 +19,7 @@
 	background-color : #eee;
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 3px solid green;
 	border-top: 5px solid green;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
@@ -96,8 +95,10 @@
 	font-family: OsvaldBold;
 }
 
+
+
 .firstNav li:last-child{
-	border-right: 0px;	
+	border-right: 1px solid green;	
 }
 
 .contactsDiv{
@@ -132,10 +133,31 @@
 
 .content{
 	width: 100%;
-	height: 100%;
+	height: 500px ;
 	background-color: #eee;
-	margin-top: 10px;
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
+
+.firstLi{
+	border-right : 1px solid green;
+	border-left :1px solid green;
+}
+
+.slides{
+	width : 70%;
+	height : 800px;
+	background-color : ;
+	left: 50%;
+	position : absolute;
+	margin-left : -35%;
+	margin-top : 15px;
+	border-radius : 5px;
+}
+
 
 @font-face {
 	font-family: Ailerons-Typeface;
@@ -156,3 +178,74 @@
 	font-family: OsvaldBold;
 	src: url("../Fonts/Oswald-Bold.otf") format("opentype");
 }
+
+
+body {
+      -webkit-font-smoothing: antialiased;
+      font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: #232525;
+      padding-top:70px;
+    }
+
+    #slides {
+      display: none
+    }
+
+    #slides .slidesjs-navigation {
+      margin-top:3px;
+    }
+
+    #slides .slidesjs-previous {
+      margin-right: 5px;
+      float: left;
+    }
+
+    #slides .slidesjs-next {
+      margin-right: 5px;
+      float: left;
+    }
+
+    .slidesjs-pagination {
+      margin: 6px 0 0;
+      float: right;
+      list-style: none;
+    }
+
+    .slidesjs-pagination li {
+      float: left;
+      margin: 0 1px;
+    }
+
+    .slidesjs-pagination li a {
+      display: block;
+      width: 13px;
+      height: 0;
+      padding-top: 13px;
+      background-image: url(../Images/pagination.png);
+      background-position: 0 0;
+      float: left;
+      overflow: hidden;
+    }
+
+    .slidesjs-pagination li a.active,
+    .slidesjs-pagination li a:hover.active {
+      background-position: 0 -13px
+    }
+
+    .slidesjs-pagination li a:hover {
+      background-position: 0 -26px
+    }
+
+    #slides a:link,
+    #slides a:visited {
+      color: #333
+    }
+
+    #slides a:hover,
+    #slides a:active {
+      color: #9e2020
+    }
+
+    .navbar {
+      overflow: hidden
+    }
