--- a/CSS/index.css
+++ b/CSS/index.css
@@ -92,13 +92,13 @@
 	padding: 0px 18px 9px; 
 	text-decoration: none;
 	font-size: 20px;	
-	font-family: OsvaldBold;
+	font-family: AllerDisplay;
 }
 
 
 
 .firstNav li:last-child{
-	border-right: 1px solid green;	
+		
 }
 
 .contactsDiv{
@@ -148,24 +148,21 @@
 }
 
 .slides{
-	width : 80%;
-	height : 500px;
-	left: 50%;
-	margin-left: -40%;
+	width : 65%;
+	height : 500px;	
 	position : absolute;
-	margin-top : 50px;
 	border-radius : 5px;
 
 }
 
 .squares{
-	width : 80%;
+	width : 90%;
 	position: relative;
 	height: 300px;
 	background-color:;
-	top: 550px;
+	top: 50px;
 	left: 50%;
-	margin-left: -40%;
+	margin-left: -45%;
 
 		
 }
@@ -232,6 +229,52 @@
 	height: 70%;
 	margin-left: 5%;
 	float:left;
+}
+
+.clients{
+	width: 30%;
+	float: right;
+	height: 500px;
+	background-color: ;
+	text-align: center;
+}
+
+.block-title{
+	line-height: 22px;
+    margin-bottom: 0;
+    font-size: 24px;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.feedback p{
+	font-size: 15px;
+    font-weight: 500;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    display: block;
+    font-weight: bold;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
+
+.feedback blockquote{
+	font-size: 14px;
+    line-height: 30px;
+    margin: 0;
+    padding: 0;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.secondLine{
+	position: absolute;
+	width: 90%;
+	height: 500px;
+	left: 50%;
+	margin-left: -45%;
+
 }
 
 @font-face {
