--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,7 +16,7 @@
 .headerDiv{
 	height: 100px;
 	width: 100%;
-	background-color : #eee;
+	background-color : white;
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
 	border-bottom: 3px solid green;
@@ -36,7 +36,7 @@
 
 .navDiv{
 	width: 300px; 
-	background-color:#eee;
+
 	height: 100px;
 	left: 50%;
 	margin-left: -150px;
@@ -97,10 +97,6 @@
 
 
 
-.firstNav li:last-child{
-		
-}
-
 .contactsDiv{
 	float: right;
 	width: 180px;
@@ -134,7 +130,7 @@
 .content{
 	width: 100%;
 	height: 1000px ;
-	background-color: #eee;
+	background-color: white;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
@@ -237,6 +233,8 @@
 	height: 500px;
 	background-color: ;
 	text-align: center;
+	border : 1px solid #eee;
+	border-radius: 5px;
 }
 
 .block-title{
