--- a/CSS/index.css
+++ b/CSS/index.css
@@ -129,13 +129,14 @@
 
 .content{
 	width: 100%;
-	height: 1000px ;
+	height: 1100px ;
 	background-color: white;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
+	margin-bottom: 10px;
 }
 
 .firstLi{
@@ -143,11 +144,37 @@
 	border-left :1px solid green;
 }
 
-.slides{
+.about{
 	width : 65%;
-	height : 500px;	
+	height : 700px;	
 	position : absolute;
-	border-radius : 5px;
+	background-color: #ededed;
+
+}
+
+
+.slides{
+	width: 99.8%;
+	position: absolute;
+	left : 0.1%;
+	height: 360px;
+}
+
+.aboutDescript{
+	margin-top: 380px;
+	padding: 15px;
+	font-size: 15px;
+    color: #333331;
+    /* margin: 0; */
+    font-family: 'Open Sans', sans-serif;
+	text-align: justify;
+
+}
+
+.about h2{
+	padding: 0px 45px;
+ 	font-size: 24px;
+ 	font-family: 'Open Sans', sans-serif;
 
 }
 
@@ -233,7 +260,6 @@
 	height: 500px;
 	background-color: ;
 	text-align: center;
-	border : 1px solid #eee;
 	border-radius: 5px;
 }
 
