--- a/CSS/index.css
+++ b/CSS/index.css
@@ -283,13 +283,32 @@
     -webkit-margin-end: 0px;
 }
 
+
 .feedback blockquote{
 	font-size: 14px;
     line-height: 30px;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     font-weight: 300;
     font-style: italic;
+    position: relative;	
+	background: #DEFCB4;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+.feedback blockquote:after {
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 15px 15px 0;
+	border-color: #DEFCB4 transparent;
+	display: block;
+	width: 0;
+	z-index: 1;
+	bottom: -15px;
+	left: 165px;
 }
 
 .secondLine{
