--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,10 @@
 	
 }
 
+.marginLeftProducts{
+	margin-left: 2px !important;
+}
+
 .externDiv{
 	width: 100%;	
 	height: 100%;	position: absolute;
@@ -34,7 +38,7 @@
 }
 
 .borderRight{
-	border-right: 2px solid #ccc;
+	box-shadow: 2px 0px 0px #ccc;
 
 }
 
@@ -95,7 +99,7 @@
 
 .contactsDiv{
 	float: right;
-	width: 180px;
+	width: 250px;
 	height: 70px;
 }
 
@@ -150,6 +154,8 @@
 
 .images article{
 	padding-top: 30px;
+	position: absolute; 
+	top: 70px;
 }
 
 .slides{
@@ -160,16 +166,16 @@
 }
 
 .aboutDescript{
-	width: 50%;
+	width: 40%;
 	padding: 45px;
-	font-size: 15px;
-    color: white;
+	font-size: 20px;
     font-weight: bold;
+    color: white;
    
     /* margin: 0; */
     font-family: 'Open Sans', sans-serif;
 	text-align: justify;
-
+	text-shadow: 1px 1px black;
 }
 
 .images{
@@ -180,11 +186,12 @@
 
 }
 
-.images h1{
+article h1{
 	padding: 0px 45px;
  	font-size: 42px;
  	font-family: OsvaldBold;
- 	color : black;
+ 	color : white;
+ 	text-shadow: 2px 2px black;
 
 }
 
