--- a/CSS/index.css
+++ b/CSS/index.css
@@ -133,7 +133,6 @@
 	background-color: white;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	margin-bottom: 10px;
@@ -168,7 +167,7 @@
 .aboutDescript{
 	width: 40%;
 	padding: 45px;
-	font-size: 20px;
+	font-size: 100%;
     font-weight: bold;
     color: white;
    
@@ -179,7 +178,7 @@
 }
 
 .images{
-	height: 550px; 
+	height: 400px; 
 	width: 100%; 
 	background: url(../Images/aguas.jpg);
 	background-size : 100%;
@@ -188,7 +187,7 @@
 
 article h1{
 	padding: 0px 45px;
- 	font-size: 42px;
+ 	font-size: 34px;
  	font-family: OsvaldBold;
  	color : white;
  	text-shadow: 2px 2px black;
@@ -196,13 +195,13 @@ article h1{
 }
 
 .squares{
-	width : 80%;
+	width : 70%;
 	position: relative;
 	height: 300px;
 	background-color:;
 	top: 50px;
 	left: 50%;
-	margin-left: -40%;
+	margin-left: -35%;
 
 		
 }
@@ -210,13 +209,12 @@ article h1{
 .divleft{
 	float:left;
 	width: 30%;
-	height: 70%;
+	height: 50%;
 	
 }
 
 .box{
-	border: 2px solid #DEFCB4;
-	border-radius: 2px;
+	border: 2px solid #dadada;
 	font-size: 80%;
 	
 }
@@ -224,7 +222,8 @@ article h1{
 .allBoxes{
 	width: 100%;
 	font-size: 30px;
-	height: 70%
+	height: 65%;
+	margin-top: 5%;
 }
 
 .boxLeft{
@@ -237,7 +236,6 @@ article h1{
 
 .secondDivInsideBox{
 	position: relative;
-	background-color: #DEFCB4;
 	height: 20% !important;
 	text-align: center;
 }
@@ -257,16 +255,20 @@ article h1{
 	margin-top: -10px;
 	display: inline-block; 
 	position: absolute;
-	font-family: OsvaldBold;
-	font-size: 15px;
+	font-family:'Open Sans';
+	font-size: 150%;
 	left: 0;
     width: 100%;
-    color : green;
+    color : black;
+    text-shadow : 1px 1px #ccc;
+    line-height: 24px;
+    display: inline;
+    font-weight: bold;
 }
 
 .divright{
 	position: relative;
-	height: 70%;	
+	height: 50%;	
 	width: 30%;
 	margin-left: 70%;	
 }
@@ -277,7 +279,7 @@ article h1{
 
 .midDiv{
 	width: 30%;
-	height: 70%;
+	height: 50%;
 	margin-left: 5%;
 	float:left;
 }
@@ -319,10 +321,11 @@ article h1{
     font-weight: 300;
     font-style: italic;
     position: relative;	
-	background: #DEFCB4;
+	background: white;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
+	border: 2px solid #ccc;
 }
 
 .feedback blockquote:after {
@@ -330,7 +333,7 @@ article h1{
 	position: absolute;
 	border-style: solid;
 	border-width: 15px 15px 0;
-	border-color: #DEFCB4 transparent;
+	border-color: #ccc transparent;
 	display: block;
 	width: 0;
 	z-index: 1;
