--- a/CSS/index.css
+++ b/CSS/index.css
@@ -33,8 +33,6 @@
 	left: 40%;
 	margin-left: -150px;
 	position: absolute;
-	
-
 }
 
 .borderRight{
@@ -131,8 +129,6 @@
 	width: 100%;
 	height: 1100px ;
 	background-color: white;
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	margin-bottom: 10px;
@@ -348,6 +344,81 @@ article h1{
 	left: 50%;
 	margin-left: -40%;
 
+}
+
+.contact{
+	width: 30%;
+	height: 270px;
+	position: absolute;
+	margin-left: 30%;
+	color : white;
+	font-size: 18px;
+}
+
+.contact ul{
+	padding: 0;
+	margin-bottom: 0px;
+}
+
+.contact li{
+	 list-style: none; 
+	 margin:0;
+	 vertical-align: middle;
+}
+
+.contact li span{
+	 margin-left: 10px;
+}
+
+.eachContact{
+	height: 24px;
+	margin-top: 10px;
+}
+
+.eachContact span{
+	position: absolute;
+	line-height: 24px;
+	margin-left: 10px;
+	font-size: 14px;
+}
+
+.local{
+	width: 40%;
+    height: 270px;
+    position: absolute;
+    color: white;
+    font-size: 18px;
+    right : 0;
+}
+
+.firstFooter{
+	width: 25%;
+	float: left;
+	height: 200px;
+	position: absolute;
+    top: 70px;
+
+}
+
+.firstFooter span{
+	font-size: 14px;
+	color : white;
+	 text-align: justify;
+}
+
+.allFooter{
+	width: 70%;
+	left: 50%;
+	margin-left: -35%;
+	position: absolute;
+	margin-top: 30px;
+
+}
+
+footer{
+	height: 300px;
+	background: #3b3b3a;
+	width: 100%;
 }
 
 @font-face {
